# rtl-433-python-weather

./: CleanUpData.py  Open_db.py  Pipfile  Pipfile.OLD  Pipfile.old  README.md  ThreadSignalUI.py  burn.py  clean_data.py  compass.py  credentials.json  database.py  databaseActions.py  email_control.py  full_gauge.qml  full_gauge.qmlc  gauge.py  gust_bar.py  logs.ui  main.py  main1.py  mainwindow.py  mainwindow.ui  mainwindow.ui-20190512  messageReceiveQueue.py  messageSendQueue.py  new-weather.e4p  outgoing.msg  output.txt  plot.py  prog.py  pyproject.toml  rainfull_bar.py  style.qss  temp.txt  temperature_bar.py  thread1.py  thread2.py  thread3.py  threadit.py  (+3 more)
new_weather/: CleanUpData.py  Open_db.py  canvasmatplot.py  compasswidget.py  databaseActions.py  main.py  mainwindow.py  mainwindow.ui  messageReceiveQueue.py  messageSendQueue.py  new-weather.e5s  process.py  rainfull_bar.py  speed_bar.py  temperature_bar.py
tests/: test_new_weather.py
