[tool.poetry]
name = "new_weather"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1"
loguru = "^0.3.2"
PyQt5 = "^5.13"
sqlalchemy = "^1.3"
pika = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
eric-ide = "^19.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
